# BridgeMate

./: .env.example  .gitignore  README.md  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  wsgi.py
api/: index.py
deploy/: bridgemate.service  nginx-bridgemate.conf  setup-macos.sh
src/: audio_analysis.py  elevenLabs.py  env_loader.py  featherless.py  immigration.py  main.py  rag.py
src/static/: interview.js  script.js  style.css
src/templates/: index.html  interview.html  welcome.html
